added unit test and some minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -2914,3 +2914,164 @@ ImagegramService/Imagegram.Api/obj/Release/net5.0/win-x64/ref/Imagegram.Api.dll
 ImagegramService/Imagegram.Api/obj/Release/net5.0/win-x64/staticwebassets/Imagegram.Api.StaticWebAssets.Manifest.cache
 ImagegramService/Imagegram.Api/obj/Release/net5.0/win-x64/staticwebassets/Imagegram.Api.StaticWebAssets.xml
 lambdas/HandleImageFormatLambda/package.zip
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/App.config
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/appsettings.Development.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/appsettings.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/AWSSDK.Core.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/AWSSDK.S3.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/beautiful.jpg
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/BouncyCastle.Crypto.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Castle.Core.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/CoverletSourceRootsMapping
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Google.Protobuf.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Api.deps.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Api.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Api.dll.config
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Api.exe
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Api.pdb
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Api.runtimeconfig.dev.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Api.runtimeconfig.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Test.deps.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Test.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Test.pdb
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Test.runtimeconfig.dev.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Imagegram.Test.runtimeconfig.json
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/K4os.Compression.LZ4.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/K4os.Compression.LZ4.Streams.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/K4os.Hash.xxHash.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.AspNetCore.JsonPatch.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.AspNetCore.Mvc.NewtonsoftJson.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.DotNet.PlatformAbstractions.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.InMemory.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Relational.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.Extensions.DependencyInjection.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.Extensions.DependencyModel.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.TestPlatform.CommunicationUtilities.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.TestPlatform.CoreUtilities.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.TestPlatform.CrossPlatEngine.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.TestPlatform.PlatformAbstractions.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.TestPlatform.Utilities.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.VisualStudio.CodeCoverage.Shim.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.VisualStudio.TestPlatform.Common.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Microsoft.VisualStudio.TestPlatform.ObjectModel.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Moq.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/MySql.Data.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/MySql.EntityFrameworkCore.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Newtonsoft.Json.Bson.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Newtonsoft.Json.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/NuGet.Frameworks.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.AspNetCore.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.Extensions.Hosting.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.Extensions.Logging.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.Formatting.Compact.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.Settings.Configuration.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.Sinks.Console.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.Sinks.Debug.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Serilog.Sinks.File.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/System.Configuration.ConfigurationManager.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/System.Diagnostics.DiagnosticSource.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/System.Security.Cryptography.ProtectedData.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/test.jpg
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/test33.jpg
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/testfile99.jpg
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/testhost.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/testhost.exe
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Ubiety.Dns.Core.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/xunit.abstractions.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/xunit.assert.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/xunit.core.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/xunit.execution.dotnet.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/xunit.runner.reporters.netcoreapp10.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/xunit.runner.utility.netcoreapp10.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/xunit.runner.visualstudio.dotnetcore.testadapter.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/Zstandard.Net.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/cs/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/cs/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/cs/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/cs/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/cs/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/de/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/de/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/de/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/de/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/de/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/es/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/es/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/es/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/es/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/es/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/fr/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/fr/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/fr/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/fr/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/fr/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/it/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/it/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/it/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/it/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/it/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ja/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ja/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ja/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ja/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ja/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ko/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ko/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ko/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ko/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ko/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pl/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pl/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pl/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pl/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pl/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pt-BR/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pt-BR/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pt-BR/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pt-BR/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/pt-BR/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ref/Imagegram.Test.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ru/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ru/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ru/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ru/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/ru/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/runtimes/win/lib/netstandard2.0/System.Security.Cryptography.ProtectedData.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/tr/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/tr/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/tr/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/tr/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/tr/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hans/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hans/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hans/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hans/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hans/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hant/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hant/Microsoft.TestPlatform.CoreUtilities.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hant/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hant/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+ImagegramService/Imagegram.Test/bin/Debug/net5.0/zh-Hant/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+ImagegramService/Imagegram.Test/obj/Imagegram.Test.csproj.nuget.dgspec.json
+ImagegramService/Imagegram.Test/obj/Imagegram.Test.csproj.nuget.g.props
+ImagegramService/Imagegram.Test/obj/Imagegram.Test.csproj.nuget.g.targets
+ImagegramService/Imagegram.Test/obj/project.assets.json
+ImagegramService/Imagegram.Test/obj/project.nuget.cache
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.AssemblyInfo.cs
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.AssemblyInfoInputs.cache
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.assets.cache
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.csproj.AssemblyReference.cache
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.csproj.CopyComplete
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.csproj.CoreCompileInputs.cache
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.csproj.FileListAbsolute.txt
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.dll
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.GeneratedMSBuildEditorConfig.editorconfig
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.genruntimeconfig.cache
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/Imagegram.Test.pdb
+ImagegramService/Imagegram.Test/obj/Debug/net5.0/ref/Imagegram.Test.dll
+ImagegramService/.vs/ImagegramService/DesignTimeBuild/.dtbcache.v2
+ImagegramService/.vs/ImagegramService/v16/TestStore/0/001.testlog
